Fix letter spacing

--- a/packages/frontend/style.css
+++ b/packages/frontend/style.css
@@ -16,7 +16,7 @@ a {
   margin-top: 1rem;
   background-color: #4a4e69;
   color: white;
-  letter-spacing: 4px;
+  letter-spacing: 3px;
   text-align: center;
   width: 400px;
   height: 60px;
@@ -241,7 +241,7 @@ label {
 .courses-container {
   display: flex;
   margin-top: 5rem;
-  justify-content: space-evenly;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 .course-container {
@@ -251,7 +251,8 @@ label {
   border-radius: 6px;
   text-align: center;
   padding: 40px;
-  width: 12rem;
+  width: 20rem;
+  height: 90%;
   margin: 10px;
   cursor: pointer;
   transform: scale(0.95);
@@ -549,12 +550,14 @@ input[type="time"] {
 .course-content {
   background-color: #4a4e69;
   color: white;
-  letter-spacing: 4px;
+  letter-spacing: 3px;
   text-align: center;
   width: 400px;
   height: 60px;
   border: 3px solid white;
   font-weight: 10px;
+  font-size: small;
+  padding: 5px;
   /* box-shadow:0px 0px 9px #00000077; */
 }
 
@@ -602,7 +605,7 @@ input[type="time"] {
   max-width: 100%;
   table-layout: fixed;
   text-align: center;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
   border-collapse: collapse;
   font-weight: lighter;
 }
@@ -658,7 +661,7 @@ thead th {
   max-width: 100%;
   table-layout: fixed;
   text-align: left;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
   border-collapse: collapse;
   font-weight: lighter;
 }
